fix: enhance portfolio introduction and skills descriptions for clarity and impact

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                     </div>
                     <div class="container">
                         <header class="major">
-                            <h2>Read Only</h2>
-                            <p>Digital craftsman of Geographic Intelligence.</p>
+                            <h2>Digital craftsman of Geographic Intelligence</h2>
+                            <p>Driving Digital Transformation Through Geospatial an IT Innovation</p>
                         </header>
-                        <p>Welcome to my professional portfolio showcasing my work in GIS, Data Science, and Generative AI. This portfolio highlights my projects, skills, and experience in leveraging geospatial technologies, data-driven decision support, and AI-powered solutions.</p>
+                        <p>I'm a versatile GIS professional with 20+ years of experience blending geospatial insight, software development, and AI to automate workflows and solve real-world spatial problems.</p>
                     </div>
                 </section> <!-- End One -->
 
@@ -77,12 +77,12 @@
                         <h3>Things I Can Do</h3>
                         <p>Combining geospatial insight with software development, I build solutions that automate workflows, enhance decision-making, and solve real-world problems rooted in geography and data.</p>
                         <ul class="feature-icons">
-                            <li class="icon solid fa-code">Develop full-stack applications</li>
-                            <li class="icon solid fa-map">Design data models and maps</li>
-                            <li class="icon solid fa-robot">Automate workflows with AI</li>
-                            <li class="icon solid fa-database">Manage and analyze databases</li>
-                            <li class="icon solid fa-chart-line">Visualize data for strategic insights</li>
-                            <li class="icon solid fa-globe">Deliver location-based solutions at scale</li>
+                            <li class="icon solid fa-code">Full-stack GIS development</li>
+                            <li class="icon solid fa-map">Data modeling</li>
+                            <li class="icon solid fa-robot">AI-powered automation</li>
+                            <li class="icon solid fa-database">Database administration</li>
+                            <li class="icon solid fa-chart-line">Data visualization</li>
+                            <li class="icon solid fa-globe">Location-based solutions</li>
                         </ul>
                     </div>
                 </section> <!-- End Two -->
