fix: update feature icon description for clarity and specificity

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <p>Combining geospatial insight with software development, I build solutions that automate workflows, enhance decision-making, and solve real-world problems rooted in geography and data.</p>
                         <ul class="feature-icons">
                             <li class="icon solid fa-code">Full-stack GIS development</li>
-                            <li class="icon solid fa-map">Data modeling</li>
+                            <li class="icon solid fa-map">Spatial data modeling</li>
                             <li class="icon solid fa-robot">AI-powered automation</li>
                             <li class="icon solid fa-database">Database administration</li>
                             <li class="icon solid fa-chart-line">Data visualization</li>
