fix: enhance professional description for clarity and impact

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                     <div class="container">
                         <header class="major">
                             <h2>Digital craftsman of Geographic Intelligence</h2>
-                            <p>Driving Digital Transformation Through Geospatial an IT Innovation</p>
+                            <p>Driving Digital Transformation Through Geospatial and IT Innovation</p>
                         </header>
-                        <p>I'm a versatile GIS professional with 20+ years of experience blending geospatial insight, software development, and AI to automate workflows and solve real-world spatial problems.</p>
+                        <p>I'm a versatile GIS professional with 20+ years of experience blending geospatial insight, software development, information management, and AI to automate workflows and deliver innovative solutions to complex, real-world challenges—both spatial and beyond.</p>
                     </div>
                 </section> <!-- End One -->
 
