--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Sabank-Portfolio</title>
         <link rel="stylesheet" href="/portfolio/assets/css/main.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css">
     </head> <!-- End Head -->
 
     <!-- Body -->
