fix: enhance professional description for clarity and impact

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <h2>Digital craftsman of Geographic Intelligence</h2>
                             <p>Driving Digital Transformation Through Geospatial and IT Innovation</p>
                         </header>
-                        <p>I'm a versatile GIS professional with over 20 years of experience integrating geospatial analysis, software development, information management, and AI to automate workflows and deliver innovative solutions to complex challenges—both spatial and non-spatial. I have a proven ability to translate complex data into actionable insights and build scalable, end-to-end solutions that drive efficiency and informed decision-making.</p>
+                        <p>I'm a versatile GIS professional with over 20 years of experience blending geospatial analysis, software development, information management, and AI to automate workflows and deliver innovative solutions to complex challenges—both spatial and non-spatial. I have a proven ability to translate complex data into actionable insights and build scalable, end-to-end solutions that drive efficiency and informed decision-making.</p>
                     </div>
                 </section> <!-- End One -->
 
