fix: update project description and title for clarity and relevance

--- a/index.html
+++ b/index.html
@@ -123,8 +123,9 @@
                             <article>
                                 <a href="#" class="image"><img src="/portfolio/images/pic03.jpg" alt="" /></a>
                                 <div class="inner">
-                                    <h4>Snapped dark matter in the wild</h4>
-                                    <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+                                    <h4>Beyond The Map</h4>
+                                    <p>Discover how GIS, data science, and automation reveal powerful insights into Canada’s import patterns. Using tools like Python and ArcGIS Pro, we transformed static data into dynamic 3D visualizations that help identify key trade corridors and inform smarter decisions.</p>
+                                    <p><a href="https://github.com/sabank/BeyondTheMap" target="_blank">GitHub repo</a></p>
                                 </div>
                             </article> <!-- End Snapped dark matter in the wild -->
                         </div>
