--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                 <a href="#" class="image"><img src="/portfolio/images/pic03.jpg" alt="" /></a>
                                 <div class="inner">
                                     <h4>Beyond The Map</h4>
-                                    <p>Discover how GIS, data science, and automation reveal powerful insights into Canada’s import patterns. Using tools like Python and ArcGIS Pro, we transformed static data into dynamic 3D visualizations that help identify key trade corridors and inform smarter decisions.</p>
+                                    <p>Showcases how GIS, data science, and automation can transform static import data into dynamic 3D visualizations, revealing key trade patterns and informing smarter decisions.</p>
                                     <p><a href="https://github.com/sabank/BeyondTheMap" target="_blank">GitHub repo</a></p>
                                 </div>
                             </article> <!-- End Snapped dark matter in the wild -->
