--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             
             <footer>
                 <ul class="icons">
-                    <li><a href="#" class="icon brands fa-facebook-f" style="pointer-events: none; opacity: 0.4; color: #888;"><span class="label">Facebook</span></a></li>
+                    <li><a href="#" class="icon brands fa-facebook-f" style="pointer-events: none; opacity: 0.4; color: #3b414a;"><span class="label">Facebook</span></a></li>
                     <li><a href="#" class="icon brands fa-instagram" style="pointer-events: none; opacity: 0.4; color: #888;"><span class="label">Instagram</span></a></li>
                     <li><a href="#" class="icon brands fa-x-twitter" style="pointer-events: none; opacity: 0.4; color: #888;"><span class="label">X (Twitter)</span></a></li>
                     <li><a href="https://www.linkedin.com/in/samyboumangock" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
