fix: update social media icon colors for improved visibility

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             
             <footer>
                 <ul class="icons">
-                    <li><a href="#" class="icon brands fa-facebook-f" style="pointer-events: none; opacity: 0.4; color: #3b414a;"><span class="label">Facebook</span></a></li>
-                    <li><a href="#" class="icon brands fa-instagram" style="pointer-events: none; opacity: 0.4; color: #888;"><span class="label">Instagram</span></a></li>
-                    <li><a href="#" class="icon brands fa-x-twitter" style="pointer-events: none; opacity: 0.4; color: #888;"><span class="label">X (Twitter)</span></a></li>
+                    <li><a href="#" class="icon brands fa-facebook-f" style="pointer-events: none; opacity: 0.4; color: #6b6b6b;"><span class="label">Facebook</span></a></li>
+                    <li><a href="#" class="icon brands fa-instagram" style="pointer-events: none; opacity: 0.4; color: #6b6b6b;"><span class="label">Instagram</span></a></li>
+                    <li><a href="#" class="icon brands fa-x-twitter" style="pointer-events: none; opacity: 0.4; color: #6b6b6b;"><span class="label">X (Twitter)</span></a></li>
                     <li><a href="https://www.linkedin.com/in/samyboumangock" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
                     <li><a href="https://github.com/sabank" class="icon brands fa-github"><span class="label">Github</span></a></li>
                     <li><a href="mailto:samybouma@hotmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
