update index.html carousel with swiper.js

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <script src="/portfolio/assets/js/breakpoints.min.js"></script>
         <script src="/portfolio/assets/js/util.js"></script>
         <script src="/portfolio/assets/js/main.js"></script>
+        <script src="/portfolio/assets/js/swiper-init.js"></script>
 
         <!-- Header -->
         <section id="header">
