update carousel css

--- a/index.html
+++ b/index.html
@@ -97,45 +97,54 @@
                                 <!-- Slide Musical Birthday Quest -->
                                 <div class="swiper-slide">
                                     <a href="https://sabank.github.io/MusicalBirthdayQuest/" target="_blank" class="carousel-item">
-                                        <img src="/portfolio/images/musicalbirthdayquest.jpg" alt="Musical Birthday Quest" />
-                                        <!-- Overlay -->
-                                        <div class="overlay">
+                                        <!-- Media Frame -->
+                                        <div class="media-frame">
+                                            <img src="/portfolio/images/musicalbirthdayquest.jpg" alt="Musical Birthday Quest" />
+                                        </div> <!-- End Media Frame -->
+                                        <!-- Description -->
+                                        <div class="description">
                                             <h4>Musical Birthday Quest</h4>
                                             <p>Combines interactive gameplay with music knowledge for a unique and engaging experience.</p>
-                                        </div> <!-- End Overlay -->
+                                        </div> <!-- End Description -->
                                     </a>
                                 </div> <!-- End Slide Musical Birthday Quest -->
 
                                 <!-- Slide ArcGIS Picture Marker Symbol -->
                                 <div class="swiper-slide">
                                     <a href="https://community.esri.com/t5/python-blog/working-example-apply-uniquevaluerenderer-with/ba-p/1618515" target="_blank" class="carousel-item">
-                                        <video autoplay loop muted playsinline>
-                                            <source src="/portfolio/images/uniqueValueRenderer_automation_demo.mp4" type="video/mp4">
-                                            Your browser does not support the video tag.
-                                        </video>
-                                        <!-- Overlay -->
-                                        <div class="overlay">
+                                        <!-- Media Frame -->
+                                        <div class="media-frame">
+                                            <video autoplay loop muted playsinline>
+                                                <source src="/portfolio/images/uniqueValueRenderer_automation_demo.mp4" type="video/mp4">
+                                                Your browser does not support the video tag.
+                                            </video>
+                                        </div> <!-- End Media Frame -->
+                                        <!-- Description -->
+                                        <div class="description">
                                             <h4>ArcGIS Picture Marker Symbol</h4>
                                             <p>Programmatically apply unique picture marker symbols to a feature layer using ArcPy in ArcGIS Pro.</p>
-                                        </div> <!-- End Overlay -->
+                                        </div> <!-- End Description -->
                                     </a>
                                 </div> <!-- End Slide ArcGIS Picture Marker Symbol -->
 
                                 <!-- Slide Beyond The Map -->
                                 <div class="swiper-slide">
                                     <a href="https://github.com/sabank/BeyondTheMap" target="_blank" class="carousel-item">
-                                        <img src="/portfolio/images/pic03.jpg" alt="Beyond The Map" />
-                                        <!-- Overlay -->
-                                        <div class="overlay">
+                                        <!-- Media Frame -->
+                                        <div class="media-frame">
+                                            <img src="/portfolio/images/pic03.jpg" alt="Beyond The Map" />
+                                        </div> <!-- End Media Frame -->
+                                        <!-- Description -->
+                                        <div class="description">
                                             <h4>Beyond The Map</h4>
                                             <p>Transform static import data into dynamic 3D visualizations to reveal trade patterns.</p>
-                                        </div> <!-- End Overlay -->
+                                        </div> <!-- End Description -->
                                     </a>
                                 </div> <!-- End Slide Beyond The Map -->
                             </div> <!-- End Swiper Wrapper -->
                             <!-- Swiper navigation -->
-                            <div class="swiper-button-next"></div>
                             <div class="swiper-button-prev"></div>
+                            <div class="swiper-button-next"></div>
                             <div class="swiper-pagination"></div>
                         </div> <!-- End Swiper -->
                     </div> <!-- End Container -->
