update carousel css

--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
                                     <a href="https://sabank.github.io/MusicalBirthdayQuest/" target="_blank" class="carousel-item">
                                         <!-- Media Frame -->
                                         <div class="media-frame">
-                                            <img src="/portfolio/images/musicalbirthdayquest.jpg" alt="Musical Birthday Quest" />
+                                            <img src="/portfolio/images/musicalbirthdayquest.jpg" alt="Musical Birthday Quest" loading="lazy"/>
                                         </div> <!-- End Media Frame -->
                                         <!-- Description -->
                                         <div class="description">
-                                            <h4>Musical Birthday Quest</h4>
+                                            <h3>Musical Birthday Quest</h3>
                                             <p>Combines interactive gameplay with music knowledge for a unique and engaging experience.</p>
                                         </div> <!-- End Description -->
                                     </a>
@@ -121,7 +121,7 @@
                                         </div> <!-- End Media Frame -->
                                         <!-- Description -->
                                         <div class="description">
-                                            <h4>ArcGIS Picture Marker Symbol</h4>
+                                            <h3>ArcGIS Picture Marker Symbol</h3>
                                             <p>Programmatically apply unique picture marker symbols to a feature layer using ArcPy in ArcGIS Pro.</p>
                                         </div> <!-- End Description -->
                                     </a>
@@ -132,19 +132,19 @@
                                     <a href="https://github.com/sabank/BeyondTheMap" target="_blank" class="carousel-item">
                                         <!-- Media Frame -->
                                         <div class="media-frame">
-                                            <img src="/portfolio/images/pic03.jpg" alt="Beyond The Map" />
+                                            <img src="/portfolio/images/pic03.jpg" alt="Beyond The Map" loading="lazy"/>
                                         </div> <!-- End Media Frame -->
                                         <!-- Description -->
                                         <div class="description">
-                                            <h4>Beyond The Map</h4>
+                                            <h3>Beyond The Map</h3>
                                             <p>Transform static import data into dynamic 3D visualizations to reveal trade patterns.</p>
                                         </div> <!-- End Description -->
                                     </a>
                                 </div> <!-- End Slide Beyond The Map -->
                             </div> <!-- End Swiper Wrapper -->
                             <!-- Swiper navigation -->
-                            <div class="swiper-button-prev"></div>
-                            <div class="swiper-button-next"></div>
+                            <div class="swiper-button-prev" aria-label="Previous slide"></div>
+                            <div class="swiper-button-next" aria-label="Next slide"></div>
                             <div class="swiper-pagination"></div>
                         </div> <!-- End Swiper -->
                     </div> <!-- End Container -->
