update contact title

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li><a href="#one" class="active">About</a></li>
                     <li><a href="#two">Things I Can Do</a></li>
                     <li><a href="#three">A Few Accomplishments</a></li>
-                    <li><a href="#four">Contact</a></li>
+                    <li><a href="#four">Get In Touch</a></li>
                 </ul>
             </nav>
             
@@ -160,7 +160,7 @@
                             <li><a href="#one">About</a></li>
                             <li><a href="#two">Things I Can Do</a></li>
                             <li><a href="#three">A Few Accomplishments</a></li>
-                            <li><a href="#four">Contact</a></li>
+                            <li><a href="#four">Get In Touch</a></li>
                         </ul>
                     </nav>
                 </div>
