update carousel items

--- a/index.html
+++ b/index.html
@@ -94,6 +94,21 @@
                         <div class="swiper mySwiper">
                             <!-- Swiper wrapper -->
                             <div class="swiper-wrapper">
+                                <!-- Slide LLD Converter API -->
+                                <div class="swiper-slide">
+                                    <a href="https://sabank.github.io/LLDConverterAPI/" target="_blank" class="carousel-item">
+                                        <!-- Media Frame -->
+                                        <div class="media-frame">
+                                            <img src="/portfolio/images/lldconverterapi.jpg" alt="LLD Converter API" loading="lazy"/>
+                                        </div> <!-- End Media Frame -->
+                                        <!-- Description -->
+                                        <div class="description">
+                                            <h3>LLD Converter API</h3>
+                                            <p>Transforms complex .lld layout files into structured, developer-friendly formats using a lightweight REST API — streamlining GIS data workflows and enabling seamless automation.</p>
+                                        </div> <!-- End Description -->
+                                    </a>
+                                </div> <!-- End Slide LLD Converter API -->
+
                                 <!-- Slide Musical Birthday Quest -->
                                 <div class="swiper-slide">
                                     <a href="https://sabank.github.io/MusicalBirthdayQuest/" target="_blank" class="carousel-item">
