revert to original index

--- a/index.html
+++ b/index.html
@@ -86,85 +86,77 @@
 
                 <!-- Three -->
                 <section id="three">
-                    <!-- Container -->
                     <div class="container">
                         <h3>A Few Accomplishments</h3>
                         <p>Here are a few highlights from my journey in GIS, Data Science, Generative AI, and creative web development. Each project reflects my passion for solving problems and building engaging digital experiences.</p>
-                        <!-- Swiper -->
-                        <div class="swiper mySwiper">
-                            <!-- Swiper wrapper -->
-                            <div class="swiper-wrapper">
-                                <!-- Slide LLD Converter API -->
-                                <div class="swiper-slide">
-                                    <a href="https://sabank.github.io/LLDConverterAPI/" target="_blank" class="carousel-item">
-                                        <!-- Media Frame -->
-                                        <div class="media-frame">
-                                            <img src="/portfolio/images/lldconverterapi.jpg" alt="LLD Converter API" loading="lazy"/>
-                                        </div> <!-- End Media Frame -->
-                                        <!-- Description -->
-                                        <div class="description">
-                                            <h3>LLD Converter API</h3>
-                                            <p>Transforms complex .lld layout files into structured, developer-friendly formats using a lightweight REST API — streamlining GIS data workflows and enabling seamless automation.</p>
-                                        </div> <!-- End Description -->
-                                    </a>
-                                </div> <!-- End Slide LLD Converter API -->
+                        <div class="features">
+                            <!-- LLD Converter API accomplishment -->
+                            <article>
+                                <a href="https://sabank.github.io/LLDConverterAPI/" class="image" target="_blank" title="Click Me">
+                                    <img src="/portfolio/images/lldconverterapi.jpg" alt="LLD Converter API"/>
+                                </a>
+                                <div class="inner">
+                                    <h4>LLD Converter API</h4>
+                                    <p>Transforms complex .lld layout files into structured, developer-friendly formats using a lightweight REST API — streamlining GIS data workflows and enabling seamless automation.</p>
+                                    <p><a href="https://github.com/sabank/LLDConverterAPI" target="_blank">GitHub repo</a></p>
+                                </div>
+                            </article> <!-- End LLD Converter API -->
 
-                                <!-- Slide Musical Birthday Quest -->
-                                <div class="swiper-slide">
-                                    <a href="https://sabank.github.io/MusicalBirthdayQuest/" target="_blank" class="carousel-item">
-                                        <!-- Media Frame -->
-                                        <div class="media-frame">
-                                            <img src="/portfolio/images/musicalbirthdayquest.jpg" alt="Musical Birthday Quest" loading="lazy"/>
-                                        </div> <!-- End Media Frame -->
-                                        <!-- Description -->
-                                        <div class="description">
-                                            <h3>Musical Birthday Quest</h3>
-                                            <p>Combines interactive gameplay with music knowledge for a unique and engaging experience.</p>
-                                        </div> <!-- End Description -->
-                                    </a>
-                                </div> <!-- End Slide Musical Birthday Quest -->
-
-                                <!-- Slide ArcGIS Picture Marker Symbol -->
-                                <div class="swiper-slide">
-                                    <a href="https://community.esri.com/t5/python-blog/working-example-apply-uniquevaluerenderer-with/ba-p/1618515" target="_blank" class="carousel-item">
-                                        <!-- Media Frame -->
-                                        <div class="media-frame">
-                                            <video autoplay loop muted playsinline>
-                                                <source src="/portfolio/images/uniqueValueRenderer_automation_demo.mp4" type="video/mp4">
-                                                Your browser does not support the video tag.
-                                            </video>
-                                        </div> <!-- End Media Frame -->
-                                        <!-- Description -->
-                                        <div class="description">
-                                            <h3>ArcGIS Picture Marker Symbol</h3>
-                                            <p>Programmatically apply unique picture marker symbols to a feature layer using ArcPy in ArcGIS Pro.</p>
-                                        </div> <!-- End Description -->
-                                    </a>
-                                </div> <!-- End Slide ArcGIS Picture Marker Symbol -->
-
-                                <!-- Slide Beyond The Map -->
-                                <div class="swiper-slide">
-                                    <a href="https://github.com/sabank/BeyondTheMap" target="_blank" class="carousel-item">
-                                        <!-- Media Frame -->
-                                        <div class="media-frame">
-                                            <img src="/portfolio/images/pic03.jpg" alt="Beyond The Map" loading="lazy"/>
-                                        </div> <!-- End Media Frame -->
-                                        <!-- Description -->
-                                        <div class="description">
-                                            <h3>Beyond The Map</h3>
-                                            <p>Transform static import data into dynamic 3D visualizations to reveal trade patterns.</p>
-                                        </div> <!-- End Description -->
-                                    </a>
-                                </div> <!-- End Slide Beyond The Map -->
-                            </div> <!-- End Swiper Wrapper -->
-                            <!-- Swiper navigation -->
-                            <div class="swiper-button-prev" aria-label="Previous slide"></div>
-                            <div class="swiper-button-next" aria-label="Next slide"></div>
-                            <div class="swiper-pagination"></div>
-                        </div> <!-- End Swiper -->
-                    </div> <!-- End Container -->
+                            <!-- Musical Birthday Quest accomplishment -->
+                            <article>
+                                <a href="https://sabank.github.io/MusicalBirthdayQuest/" class="image" target="_blank" title="Click Me">
+                                    <img src="/portfolio/images/musicalbirthdayquest.jpg" alt="Musical Birthday Quest"/>
+                                </a>
+                                <div class="inner">
+                                    <h4>Musical Birthday Quest</h4>
+                                    <p>Combines interactive gameplay with music knowledge for a unique and engaging experience.</p>
+                                    <p><a href="https://github.com/sabank/MusicalBirthdayQuest" target="_blank">GitHub repo</a></p>
+                                </div>
+                            </article> <!-- End Musical Birthday Quest -->
+                            
+                            <!-- ArcGIS Picture Marker Symbol accomplishment -->
+                            <article>
+                                <video class="image" width="937" height="621" autoplay loop muted playsinline style="max-width:100%;height:auto;" title="ArcGIS Picture Marker Symbol">
+                                    <source src="/portfolio/images/uniqueValueRenderer_automation_demo.mp4" type="video/mp4">
+                                    Your browser does not support the video tag.
+                                </video>
+                                <div class="inner">
+                                    <h4>ArcGIS Picture Marker Symbol</h4>
+                                    <p>Demonstrates how to programmatically apply unique picture marker symbols to a feature layer using ArcPy in ArcGIS Pro.</p>
+                                    <p><a href="https://community.esri.com/t5/python-blog/working-example-apply-uniquevaluerenderer-with/ba-p/1618515" target="_blank">Blog article</a></p>
+                                </div>
+                            </article> <!-- End ArcGIS Picture Marker Symbol -->
+                            
+                            <!-- Snapped dark matter in the wild accomplishment -->
+                            <article>
+                                <a href="#" class="image"><img src="/portfolio/images/pic03.jpg" alt="" /></a>
+                                <div class="inner">
+                                    <h4>Beyond The Map</h4>
+                                    <p>Showcases how GIS, data science, and automation can transform static import data into dynamic 3D visualizations, revealing key trade patterns and informing smarter decisions.</p>
+                                    <p><a href="https://github.com/sabank/BeyondTheMap" target="_blank">GitHub repo</a></p>
+                                </div>
+                            </article> <!-- End Snapped dark matter in the wild -->
+                        </div>
+                    </div>
                 </section> <!-- End Three -->
-			</div> <!-- End Main -->
+
+                <!-- Four -->
+                <section id="four">
+                    <!-- Container -->
+                    <div class="container">
+                        <h3>Get In Touch</h3>
+                        <p>I'm always open to new opportunities and collaborations. Whether you have a project in mind, want to discuss geospatial technology, or just want to say hello, feel free to reach out!</p>
+                        <form method="post" action="#">
+                            <div class="row gtr-uniform">
+                                <div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" required /></div>
+                                <div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" required /></div>
+                                <div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4" required></textarea></div>
+                                <div class="col-12"><input type="submit" value="Send Message" class="primary"/></div>
+                            </div>
+                        </form>
+                    </div> <!-- End Container -->
+                </section> <!-- End Four -->
+            </div> <!-- End Main -->
 
             <!-- Sidebar -->
             <section id="sidebar">
