update accomplishment items

--- a/index.html
+++ b/index.html
@@ -129,7 +129,9 @@
                             
                             <!-- Snapped dark matter in the wild accomplishment -->
                             <article>
-                                <a href="#" class="image"><img src="/portfolio/images/pic03.jpg" alt="" /></a>
+                                <a href="#" class="image" target="_blank" title="Click Me">
+                                    <img src="/portfolio/images/pic03.jpg" alt="Beyond The Map" />
+                                </a>
                                 <div class="inner">
                                     <h4>Beyond The Map</h4>
                                     <p>Showcases how GIS, data science, and automation can transform static import data into dynamic 3D visualizations, revealing key trade patterns and informing smarter decisions.</p>
