--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                 </a>
                                 <div class="inner">
                                     <h4>LLD Converter API</h4>
-                                    <p>Transforms complex .lld layout files into structured, developer-friendly formats using a lightweight REST API — streamlining GIS data workflows and enabling seamless automation.</p>
+                                    <p>Transforms complex Legal Land Description into Lat Long coordinates using a lightweight REST API.</p>
                                     <p><a href="https://github.com/sabank/LLDConverterAPI" target="_blank">GitHub repo</a></p>
                                 </div>
                             </article> <!-- End LLD Converter API -->
@@ -129,7 +129,7 @@
                             
                             <!-- Snapped dark matter in the wild accomplishment -->
                             <article>
-                                <a href="#" class="image" target="_blank" title="Click Me">
+                                <a href="#" class="image">
                                     <img src="/portfolio/images/pic03.jpg" alt="Beyond The Map" />
                                 </a>
                                 <div class="inner">
@@ -150,10 +150,12 @@
                         <p>I'm always open to new opportunities and collaborations. Whether you have a project in mind, want to discuss geospatial technology, or just want to say hello, feel free to reach out!</p>
                         <form method="post" action="#">
                             <div class="row gtr-uniform">
-                                <div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" required /></div>
-                                <div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" required /></div>
+                                <div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Your Name" required /></div>
+                                <div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Your Email" required /></div>
                                 <div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4" required></textarea></div>
                                 <div class="col-12"><input type="submit" value="Send Message" class="primary"/></div>
+                                <div class="col-12">
+                                    <p>Note: This form is for demonstration purposes only and does not send emails.</p>
                             </div>
                         </form>
                     </div> <!-- End Container -->
